[gd_scene load_steps=10 format=3 uid="uid://duio0ke3bpeoi"]

[ext_resource type="Script" path="res://addons/chicken_scratch/graph/DialogueGraphEditor.gd" id="1_x85w6"]
[ext_resource type="PackedScene" uid="uid://dgeynvwx2mhg5" path="res://addons/chicken_scratch/graph/root_node.tscn" id="2_f4bov"]
[ext_resource type="PackedScene" uid="uid://542bcl844gbm" path="res://addons/chicken_scratch/graph/dialogue_node.tscn" id="3_76s1u"]
[ext_resource type="Texture2D" uid="uid://bo6mykqvqv2y" path="res://addons/chicken_scratch/icons/cross.svg" id="4_7gnp3"]
[ext_resource type="PackedScene" uid="uid://dttyij5w5h0nc" path="res://addons/chicken_scratch/graph/variable_value.tscn" id="4_wkgrm"]
[ext_resource type="PackedScene" uid="uid://3543xgdit3ts" path="res://addons/chicken_scratch/dialogue_box.tscn" id="5_1byyu"]
[ext_resource type="Texture2D" uid="uid://cnbk0jnfotvev" path="res://addons/chicken_scratch/icons/play_button.svg" id="6_av8pf"]
[ext_resource type="PackedScene" uid="uid://cwt4loou338go" path="res://addons/chicken_scratch/graph/dialogue_box_preview.tscn" id="6_o5nju"]
[ext_resource type="Script" path="res://addons/chicken_scratch/graph/DialogueGraph.gd" id="8_do64j"]

[node name="ChickenScratchEditor" type="VBoxContainer"]
offset_right = 1584.0
offset_bottom = 942.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_x85w6")
root_node_scn = ExtResource("2_f4bov")
dialogue_node = ExtResource("3_76s1u")
variable_value = ExtResource("4_wkgrm")
dialogue_box_scn = ExtResource("5_1byyu")
dialogue_box_preview_scn = ExtResource("6_o5nju")
Graph = Object(GraphEdit,"_import_path":NodePath(""),"unique_name_in_owner":false,"process_mode":0,"process_priority":0,"process_physics_priority":0,"process_thread_group":0,"editor_description":"","visible":true,"modulate":Color(1, 1, 1, 1),"self_modulate":Color(1, 1, 1, 1),"show_behind_parent":false,"top_level":false,"clip_children":0,"light_mask":1,"visibility_layer":1,"z_index":0,"z_as_relative":true,"y_sort_enabled":false,"texture_filter":0,"texture_repeat":0,"material":null,"use_parent_material":false,"clip_contents":true,"custom_minimum_size":Vector2(0, 0),"layout_direction":0,"layout_mode":2,"size_flags_horizontal":3,"size_flags_vertical":3,"size_flags_stretch_ratio":1.0,"auto_translate":true,"localize_numeral_system":true,"tooltip_text":"","focus_neighbor_left":NodePath(""),"focus_neighbor_top":NodePath(""),"focus_neighbor_right":NodePath(""),"focus_neighbor_bottom":NodePath(""),"focus_next":NodePath(""),"focus_previous":NodePath(""),"focus_mode":2,"mouse_filter":0,"mouse_force_pass_scroll_events":true,"mouse_default_cursor_shape":0,"shortcut_context":null,"theme":null,"theme_type_variation":&"","right_disconnects":true,"scroll_offset":Vector2(0, 0),"snap_distance":20,"use_snap":true,"panning_scheme":0,"connection_lines_curvature":0.5,"connection_lines_thickness":2.0,"connection_lines_antialiased":true,"zoom":1.0,"zoom_min":0.232568,"zoom_max":2.0736,"zoom_step":1.2,"show_zoom_label":true,"minimap_enabled":false,"minimap_size":Vector2(240, 160),"minimap_opacity":0.65,"arrange_nodes_button_hidden":true,"script":ExtResource("8_do64j"))

FileMenu = Object(MenuButton,"_import_path":NodePath(""),"unique_name_in_owner":false,"process_mode":0,"process_priority":0,"process_physics_priority":0,"process_thread_group":0,"editor_description":"","visible":true,"modulate":Color(1, 1, 1, 1),"self_modulate":Color(1, 1, 1, 1),"show_behind_parent":false,"top_level":false,"clip_children":0,"light_mask":1,"visibility_layer":1,"z_index":0,"z_as_relative":true,"y_sort_enabled":false,"texture_filter":0,"texture_repeat":0,"material":null,"use_parent_material":false,"clip_contents":false,"custom_minimum_size":Vector2(30, 0),"layout_direction":0,"layout_mode":2,"size_flags_horizontal":1,"size_flags_vertical":1,"size_flags_stretch_ratio":1.0,"auto_translate":true,"localize_numeral_system":true,"tooltip_text":"","focus_neighbor_left":NodePath(""),"focus_neighbor_top":NodePath(""),"focus_neighbor_right":NodePath(""),"focus_neighbor_bottom":NodePath(""),"focus_next":NodePath(""),"focus_previous":NodePath(""),"focus_mode":0,"mouse_filter":0,"mouse_force_pass_scroll_events":true,"mouse_default_cursor_shape":0,"shortcut_context":null,"theme":null,"theme_type_variation":&"","disabled":false,"toggle_mode":true,"button_pressed":false,"action_mode":0,"button_mask":1,"keep_pressed_outside":false,"button_group":null,"shortcut":null,"shortcut_feedback":true,"shortcut_in_tooltip":true,"text":"File","icon":null,"flat":false,"alignment":1,"text_overrun_behavior":0,"clip_text":false,"icon_alignment":0,"vertical_icon_alignment":1,"expand_icon":false,"text_direction":0,"language":"","switch_on_hover":false,"item_count":4,"popup/item_0/text":"New Graph","popup/item_0/id":0,"popup/item_1/text":"Open...","popup/item_1/id":1,"popup/item_2/text":"Save","popup/item_2/id":2,"popup/item_3/text":"Save Pretty","popup/item_3/id":3,"script":null)

Filename = Object(Label,"_import_path":NodePath(""),"unique_name_in_owner":false,"process_mode":0,"process_priority":0,"process_physics_priority":0,"process_thread_group":0,"editor_description":"","visible":true,"modulate":Color(1, 1, 1, 1),"self_modulate":Color(1, 1, 1, 1),"show_behind_parent":false,"top_level":false,"clip_children":0,"light_mask":1,"visibility_layer":1,"z_index":0,"z_as_relative":true,"y_sort_enabled":false,"texture_filter":0,"texture_repeat":0,"material":null,"use_parent_material":false,"clip_contents":false,"custom_minimum_size":Vector2(0, 0),"layout_direction":0,"layout_mode":2,"size_flags_horizontal":3,"size_flags_vertical":1,"size_flags_stretch_ratio":1.0,"auto_translate":true,"localize_numeral_system":true,"tooltip_text":"","focus_neighbor_left":NodePath(""),"focus_neighbor_top":NodePath(""),"focus_neighbor_right":NodePath(""),"focus_neighbor_bottom":NodePath(""),"focus_next":NodePath(""),"focus_previous":NodePath(""),"focus_mode":0,"mouse_filter":2,"mouse_force_pass_scroll_events":true,"mouse_default_cursor_shape":0,"shortcut_context":null,"theme":null,"theme_type_variation":&"","text":"[empty]","label_settings":null,"horizontal_alignment":1,"vertical_alignment":0,"autowrap_mode":0,"justification_flags":163,"clip_text":false,"text_overrun_behavior":0,"uppercase":false,"tab_stops":PackedFloat32Array(),"lines_skipped":0,"max_lines_visible":-1,"visible_characters":-1,"visible_characters_behavior":0,"visible_ratio":1.0,"text_direction":0,"language":"","structured_text_bidi_override":0,"structured_text_bidi_override_options":[],"script":null)

right_click_menu = Object(PopupMenu,"_import_path":NodePath(""),"unique_name_in_owner":false,"process_mode":0,"process_priority":0,"process_physics_priority":0,"process_thread_group":0,"editor_description":"","disable_3d":false,"use_xr":false,"own_world_3d":false,"world_3d":null,"transparent_bg":false,"handle_input_locally":true,"snap_2d_transforms_to_pixel":false,"snap_2d_vertices_to_pixel":false,"msaa_2d":0,"msaa_3d":0,"screen_space_aa":0,"use_taa":false,"use_debanding":false,"use_occlusion_culling":false,"mesh_lod_threshold":1.0,"debug_draw":0,"scaling_3d_mode":0,"scaling_3d_scale":1.0,"texture_mipmap_bias":0.0,"fsr_sharpness":0.2,"vrs_mode":0,"vrs_texture":null,"canvas_item_default_texture_filter":1,"canvas_item_default_texture_repeat":0,"audio_listener_enable_2d":false,"audio_listener_enable_3d":false,"physics_object_picking":false,"physics_object_picking_sort":false,"gui_disable_input":false,"gui_snap_controls_to_pixels":true,"gui_embed_subwindows":false,"sdf_oversize":1,"sdf_scale":1,"positional_shadow_atlas_size":2048,"positional_shadow_atlas_16_bits":true,"positional_shadow_atlas_quad_0":2,"positional_shadow_atlas_quad_1":2,"positional_shadow_atlas_quad_2":3,"positional_shadow_atlas_quad_3":4,"canvas_cull_mask":4294967295,"mode":0,"title":"","initial_position":0,"position":Vector2i(0, 36),"size":Vector2i(176, 35),"mouse_passthrough_polygon":PackedVector2Array(),"visible":false,"wrap_controls":true,"transient":true,"exclusive":false,"unresizable":false,"borderless":true,"always_on_top":false,"transparent":false,"unfocusable":false,"popup_window":true,"extend_to_title":false,"mouse_passthrough":false,"min_size":Vector2i(0, 0),"max_size":Vector2i(32768, 32768),"content_scale_size":Vector2i(0, 0),"content_scale_mode":0,"content_scale_aspect":0,"content_scale_factor":1.0,"auto_translate":true,"theme":null,"theme_type_variation":&"","hide_on_item_selection":true,"hide_on_checkable_item_selection":true,"hide_on_state_item_selection":false,"submenu_popup_delay":0.01,"allow_search":true,"item_count":1,"item_0/text":"Add Dialogue Node","item_0/id":0,"script":null)

delete_confirmation = Object(ConfirmationDialog,"_import_path":NodePath(""),"unique_name_in_owner":false,"process_mode":0,"process_priority":0,"process_physics_priority":0,"process_thread_group":0,"editor_description":"","disable_3d":false,"use_xr":false,"own_world_3d":false,"world_3d":null,"transparent_bg":false,"handle_input_locally":true,"snap_2d_transforms_to_pixel":false,"snap_2d_vertices_to_pixel":false,"msaa_2d":0,"msaa_3d":0,"screen_space_aa":0,"use_taa":false,"use_debanding":false,"use_occlusion_culling":false,"mesh_lod_threshold":1.0,"debug_draw":0,"scaling_3d_mode":0,"scaling_3d_scale":1.0,"texture_mipmap_bias":0.0,"fsr_sharpness":0.2,"vrs_mode":0,"vrs_texture":null,"canvas_item_default_texture_filter":1,"canvas_item_default_texture_repeat":0,"audio_listener_enable_2d":false,"audio_listener_enable_3d":false,"physics_object_picking":false,"physics_object_picking_sort":false,"gui_disable_input":false,"gui_snap_controls_to_pixels":true,"gui_embed_subwindows":false,"sdf_oversize":1,"sdf_scale":1,"positional_shadow_atlas_size":2048,"positional_shadow_atlas_16_bits":true,"positional_shadow_atlas_quad_0":2,"positional_shadow_atlas_quad_1":2,"positional_shadow_atlas_quad_2":3,"positional_shadow_atlas_quad_3":4,"canvas_cull_mask":4294967295,"mode":0,"title":"Please Confirm...","initial_position":4,"size":Vector2i(200, 100),"mouse_passthrough_polygon":PackedVector2Array(),"visible":false,"wrap_controls":true,"transient":true,"exclusive":true,"unresizable":false,"borderless":false,"always_on_top":false,"transparent":false,"unfocusable":false,"popup_window":false,"extend_to_title":false,"mouse_passthrough":false,"min_size":Vector2i(200, 70),"max_size":Vector2i(32768, 32768),"content_scale_size":Vector2i(0, 0),"content_scale_mode":0,"content_scale_aspect":0,"content_scale_factor":1.0,"auto_translate":true,"theme":null,"theme_type_variation":&"","ok_button_text":"Yes","dialog_text":"Do you want to delete the node(s)?","dialog_hide_on_ok":true,"dialog_close_on_escape":true,"dialog_autowrap":false,"cancel_button_text":"Cancel","script":null)

dialogue_preview = Object(Window,"_import_path":NodePath(""),"unique_name_in_owner":false,"process_mode":0,"process_priority":0,"process_physics_priority":0,"process_thread_group":0,"editor_description":"","disable_3d":false,"use_xr":false,"own_world_3d":false,"world_3d":null,"transparent_bg":false,"handle_input_locally":false,"snap_2d_transforms_to_pixel":false,"snap_2d_vertices_to_pixel":false,"msaa_2d":0,"msaa_3d":0,"screen_space_aa":0,"use_taa":false,"use_debanding":false,"use_occlusion_culling":false,"mesh_lod_threshold":1.0,"debug_draw":0,"scaling_3d_mode":0,"scaling_3d_scale":1.0,"texture_mipmap_bias":0.0,"fsr_sharpness":0.2,"vrs_mode":0,"vrs_texture":null,"canvas_item_default_texture_filter":1,"canvas_item_default_texture_repeat":0,"audio_listener_enable_2d":false,"audio_listener_enable_3d":false,"physics_object_picking":false,"physics_object_picking_sort":false,"gui_disable_input":false,"gui_snap_controls_to_pixels":true,"gui_embed_subwindows":false,"sdf_oversize":1,"sdf_scale":1,"positional_shadow_atlas_size":2048,"positional_shadow_atlas_16_bits":true,"positional_shadow_atlas_quad_0":2,"positional_shadow_atlas_quad_1":2,"positional_shadow_atlas_quad_2":3,"positional_shadow_atlas_quad_3":4,"canvas_cull_mask":4294967295,"mode":0,"title":"Preview","initial_position":4,"size":Vector2i(300, 220),"mouse_passthrough_polygon":PackedVector2Array(),"visible":false,"wrap_controls":true,"transient":false,"exclusive":false,"unresizable":false,"borderless":false,"always_on_top":true,"transparent":false,"unfocusable":false,"popup_window":false,"extend_to_title":false,"mouse_passthrough":false,"min_size":Vector2i(0, 0),"max_size":Vector2i(32768, 32768),"content_scale_size":Vector2i(0, 0),"content_scale_mode":1,"content_scale_aspect":1,"content_scale_factor":1.0,"auto_translate":true,"theme":null,"theme_type_variation":&"","script":null)

test_variables_container = Object(VBoxContainer,"_import_path":NodePath(""),"unique_name_in_owner":false,"process_mode":0,"process_priority":0,"process_physics_priority":0,"process_thread_group":0,"editor_description":"","visible":false,"modulate":Color(1, 1, 1, 1),"self_modulate":Color(1, 1, 1, 1),"show_behind_parent":false,"top_level":false,"clip_children":0,"light_mask":1,"visibility_layer":1,"z_index":0,"z_as_relative":true,"y_sort_enabled":false,"texture_filter":0,"texture_repeat":0,"material":null,"use_parent_material":false,"clip_contents":false,"custom_minimum_size":Vector2(0, 0),"layout_direction":0,"layout_mode":2,"size_flags_horizontal":1,"size_flags_vertical":1,"size_flags_stretch_ratio":1.0,"auto_translate":true,"localize_numeral_system":true,"tooltip_text":"","focus_neighbor_left":NodePath(""),"focus_neighbor_top":NodePath(""),"focus_neighbor_right":NodePath(""),"focus_neighbor_bottom":NodePath(""),"focus_next":NodePath(""),"focus_previous":NodePath(""),"focus_mode":0,"mouse_filter":1,"mouse_force_pass_scroll_events":true,"mouse_default_cursor_shape":0,"shortcut_context":null,"theme":null,"theme_type_variation":&"","alignment":0,"script":null)

test_variables = Object(VBoxContainer,"_import_path":NodePath(""),"unique_name_in_owner":false,"process_mode":0,"process_priority":0,"process_physics_priority":0,"process_thread_group":0,"editor_description":"","visible":true,"modulate":Color(1, 1, 1, 1),"self_modulate":Color(1, 1, 1, 1),"show_behind_parent":false,"top_level":false,"clip_children":0,"light_mask":1,"visibility_layer":1,"z_index":0,"z_as_relative":true,"y_sort_enabled":false,"texture_filter":0,"texture_repeat":0,"material":null,"use_parent_material":false,"clip_contents":false,"custom_minimum_size":Vector2(0, 0),"layout_direction":0,"layout_mode":2,"size_flags_horizontal":1,"size_flags_vertical":1,"size_flags_stretch_ratio":1.0,"auto_translate":true,"localize_numeral_system":true,"tooltip_text":"","focus_neighbor_left":NodePath(""),"focus_neighbor_top":NodePath(""),"focus_neighbor_right":NodePath(""),"focus_neighbor_bottom":NodePath(""),"focus_next":NodePath(""),"focus_previous":NodePath(""),"focus_mode":0,"mouse_filter":1,"mouse_force_pass_scroll_events":true,"mouse_default_cursor_shape":0,"shortcut_context":null,"theme":null,"theme_type_variation":&"","alignment":0,"script":null)


[node name="GraphContainer" type="VBoxContainer" parent="."]
texture_filter = 1
clip_contents = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="GraphContainer"]
layout_mode = 2

[node name="FileMenu" type="MenuButton" parent="GraphContainer/HBoxContainer"]
custom_minimum_size = Vector2(30, 0)
layout_mode = 2
text = "File"
flat = false
item_count = 4
popup/item_0/text = "New Graph"
popup/item_0/id = 0
popup/item_1/text = "Open..."
popup/item_1/id = 1
popup/item_2/text = "Save"
popup/item_2/id = 2
popup/item_3/text = "Save Pretty"
popup/item_3/id = 3

[node name="VSeparator" type="VSeparator" parent="GraphContainer/HBoxContainer"]
layout_mode = 2

[node name="Print" type="Button" parent="GraphContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 0
text = "Print"

[node name="Play" type="Button" parent="GraphContainer/HBoxContainer"]
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
focus_mode = 0
text = "Play Dialogue Tree"
icon = ExtResource("6_av8pf")
alignment = 2

[node name="VSeparator2" type="VSeparator" parent="GraphContainer/HBoxContainer"]
layout_mode = 2

[node name="SpinBox" type="SpinBox" parent="GraphContainer/HBoxContainer"]
visible = false
layout_mode = 2

[node name="Filename" type="Label" parent="GraphContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
text = "[empty]"
horizontal_alignment = 1

[node name="Control2" type="Control" parent="GraphContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Control3" type="Control" parent="GraphContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Control4" type="Control" parent="GraphContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HSplitContainer" type="HSplitContainer" parent="GraphContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="TestVariableContainer" type="HBoxContainer" parent="GraphContainer/HSplitContainer"]
layout_mode = 2

[node name="Control" type="Control" parent="GraphContainer/HSplitContainer/TestVariableContainer"]
custom_minimum_size = Vector2(4, 0)
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="GraphContainer/HSplitContainer/TestVariableContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ToggleShowVariables" type="Button" parent="GraphContainer/HSplitContainer/TestVariableContainer/VBoxContainer"]
custom_minimum_size = Vector2(34, 34)
layout_mode = 2
focus_mode = 0
text = "𝑥 Variables"

[node name="TestVariableContainer" type="VBoxContainer" parent="GraphContainer/HSplitContainer/TestVariableContainer/VBoxContainer"]
visible = false
layout_mode = 2

[node name="AddVariable" type="Button" parent="GraphContainer/HSplitContainer/TestVariableContainer/VBoxContainer/TestVariableContainer"]
layout_mode = 2
text = "Add Variable"
icon = ExtResource("4_7gnp3")

[node name="TestVariables" type="VBoxContainer" parent="GraphContainer/HSplitContainer/TestVariableContainer/VBoxContainer/TestVariableContainer"]
layout_mode = 2

[node name="Graph" type="GraphEdit" parent="GraphContainer/HSplitContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
right_disconnects = true
show_zoom_label = true
minimap_enabled = false
arrange_nodes_button_hidden = true
script = ExtResource("8_do64j")

[node name="DeleteConfirmationDialog" type="ConfirmationDialog" parent="."]
initial_position = 4
ok_button_text = "Yes"
dialog_text = "Do you want to delete the node(s)?"

[node name="RightClickMenu" type="PopupMenu" parent="."]
position = Vector2i(0, 36)
size = Vector2i(176, 35)
unresizable = false
submenu_popup_delay = 0.01
item_count = 1
item_0/text = "Add Dialogue Node"
item_0/id = 0

[node name="Window" type="Window" parent="."]
handle_input_locally = false
title = "Preview"
initial_position = 4
size = Vector2i(300, 220)
visible = false
wrap_controls = true
always_on_top = true
content_scale_mode = 1
content_scale_aspect = 1

[node name="Container" type="MarginContainer" parent="Window"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="Window/Container"]
layout_mode = 2

[node name="ThemeLabel" type="Label" parent="Window/Container/VBoxContainer"]
layout_mode = 2
text = "[default_theme]"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Window/Container/VBoxContainer"]
layout_mode = 2

[node name="ChangeTheme" type="Button" parent="Window/Container/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(34, 30)
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 0
text = "Change Theme"

[node name="RemoveTheme" type="Button" parent="Window/Container/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 0
text = "Remove Theme"

[node name="PreviewText" type="RichTextLabel" parent="Window/Container/VBoxContainer"]
unique_name_in_owner = true
clip_contents = false
custom_minimum_size = Vector2(200, 100)
layout_mode = 2
focus_mode = 1
bbcode_enabled = true
scroll_active = false
context_menu_enabled = true

[connection signal="pressed" from="GraphContainer/HBoxContainer/Print" to="." method="_on_print_pressed"]
[connection signal="pressed" from="GraphContainer/HBoxContainer/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="GraphContainer/HSplitContainer/TestVariableContainer/VBoxContainer/ToggleShowVariables" to="." method="_on_toggle_show_variables_pressed"]
[connection signal="pressed" from="GraphContainer/HSplitContainer/TestVariableContainer/VBoxContainer/TestVariableContainer/AddVariable" to="." method="_on_add_variable_pressed"]
[connection signal="connection_request" from="GraphContainer/HSplitContainer/Graph" to="." method="_on_graph_connection_request"]
[connection signal="copy_nodes_request" from="GraphContainer/HSplitContainer/Graph" to="." method="_on_graph_copy_nodes_request"]
[connection signal="delete_nodes_request" from="GraphContainer/HSplitContainer/Graph" to="." method="_on_graph_delete_nodes_request"]
[connection signal="disconnection_request" from="GraphContainer/HSplitContainer/Graph" to="." method="_on_graph_disconnection_request"]
[connection signal="duplicate_nodes_request" from="GraphContainer/HSplitContainer/Graph" to="." method="_on_graph_duplicate_nodes_request"]
[connection signal="gui_input" from="GraphContainer/HSplitContainer/Graph" to="." method="_on_graph_gui_input"]
[connection signal="node_deselected" from="GraphContainer/HSplitContainer/Graph" to="." method="_on_graph_node_deselected"]
[connection signal="node_selected" from="GraphContainer/HSplitContainer/Graph" to="." method="_on_graph_node_selected"]
[connection signal="paste_nodes_request" from="GraphContainer/HSplitContainer/Graph" to="." method="_on_graph_paste_nodes_request"]
[connection signal="popup_request" from="GraphContainer/HSplitContainer/Graph" to="." method="_on_graph_popup_request"]
[connection signal="tree_entered" from="GraphContainer/HSplitContainer/Graph" to="." method="_on_graph_tree_entered"]
[connection signal="tree_exited" from="GraphContainer/HSplitContainer/Graph" to="." method="_on_graph_tree_exited"]
[connection signal="canceled" from="DeleteConfirmationDialog" to="." method="_on_delete_confirmation_dialog_canceled"]
[connection signal="confirmed" from="DeleteConfirmationDialog" to="." method="_on_delete_confirmation_dialog_confirmed"]
[connection signal="id_pressed" from="RightClickMenu" to="." method="_on_right_click_menu_id_pressed"]
[connection signal="close_requested" from="Window" to="." method="_on_dialogue_preview_close_requested"]
[connection signal="pressed" from="Window/Container/VBoxContainer/HBoxContainer/ChangeTheme" to="." method="_on_change_theme_pressed"]
[connection signal="pressed" from="Window/Container/VBoxContainer/HBoxContainer/RemoveTheme" to="." method="_on_remove_theme_pressed"]
